ci: add config auto-generation test, docs freshness checks, and CI path filtering
- Add config.example.json parity test that generates from Config::default()
  with credential overlays and compares structurally via json_diff()
- Update config.example.json to include all fields from schema (dmPolicy,
  circuitBreaker, sandbox, exfiltrationGuard, discord commands, etc.)
- Add docs staleness check to pre-commit hook (only when source pages staged)
- Add docs freshness CI step in check job
- Add dorny/paths-filter change detection job to skip heavy CI jobs for
  docs-only/README-only changes (~30s vs ~15min)
- Gate all compilation/test/package jobs on code changes
- Update ci-gate to accept skipped status for gated jobs
- Add CLAUDE.md pitfall notes for config generation and docs hooks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,35 @@ env:
   CMAKE_MACOS: ""
 
 jobs:
+  # ── Change Detection ────────────────────────────────────────────────
+  changes:
+    name: Detect Changes
+    runs-on: ubuntu-latest
+    outputs:
+      code: ${{ steps.filter.outputs.code }}
+    steps:
+      - uses: actions/checkout@v6
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            code:
+              - 'src/**'
+              - 'tests/**'
+              - 'Cargo.toml'
+              - 'Cargo.lock'
+              - 'build.rs'
+              - 'fuzz/**'
+              - 'cmake/**'
+              - 'deploy/**'
+              - '.github/workflows/**'
+              - '.cargo/**'
+
   # ── Compile (Debug) ──────────────────────────────────────────────────
   compile-debug:
     name: Compile Debug (${{ matrix.name }})
+    needs: [changes]
+    if: needs.changes.outputs.code == 'true'
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
@@ -83,6 +109,8 @@ jobs:
   # ── Compile (Release, Linux) ─────────────────────────────────────────
   compile-release-linux:
     name: Compile Release (linux)
+    needs: [changes]
+    if: needs.changes.outputs.code == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -140,11 +168,21 @@ jobs:
       - name: cargo-deny advisories
         run: cargo deny check advisories
 
+      - name: Check generated docs are up to date
+        run: |
+          python3 docs/build.py
+          if ! git diff --quiet -- docs/; then
+            echo "::error::Generated docs are stale. Run 'python3 docs/build.py' and commit."
+            git diff --stat -- docs/
+            exit 1
+          fi
+
   # ── Clippy ─────────────────────────────────────────────────────────
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
-    needs: [compile-debug]
+    needs: [changes, compile-debug]
+    if: needs.changes.outputs.code == 'true'
     permissions:
       contents: read
       security-events: write
@@ -199,7 +237,8 @@ jobs:
   # ── Unit Tests ──────────────────────────────────────────────────────
   test-unit:
     name: Unit Tests (${{ matrix.name }})
-    needs: [compile-debug]
+    needs: [changes, compile-debug]
+    if: needs.changes.outputs.code == 'true'
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
@@ -259,7 +298,8 @@ jobs:
   # ── Integration Tests ───────────────────────────────────────────────
   test-integration:
     name: Integration Tests (${{ matrix.name }})
-    needs: [compile-debug]
+    needs: [changes, compile-debug]
+    if: needs.changes.outputs.code == 'true'
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
@@ -336,8 +376,8 @@ jobs:
   test-results:
     name: Test Results
     runs-on: ubuntu-latest
-    needs: [test-unit, test-integration]
-    if: always()
+    needs: [changes, test-unit, test-integration]
+    if: always() && needs.changes.outputs.code == 'true'
     permissions:
       checks: write
       pull-requests: write
@@ -358,6 +398,8 @@ jobs:
   # ── Coverage ────────────────────────────────────────────────────────
   coverage:
     name: Coverage
+    needs: [changes]
+    if: needs.changes.outputs.code == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -411,7 +453,8 @@ jobs:
   binary-size:
     name: Binary Size
     runs-on: ubuntu-latest
-    needs: [compile-release-linux]
+    needs: [changes, compile-release-linux]
+    if: needs.changes.outputs.code == 'true'
     steps:
       - uses: actions/checkout@v6
 
@@ -487,7 +530,8 @@ jobs:
   package-linux:
     name: Package (linux)
     runs-on: ubuntu-latest
-    needs: [compile-release-linux]
+    needs: [changes, compile-release-linux]
+    if: needs.changes.outputs.code == 'true'
     steps:
       - uses: actions/checkout@v6
 
@@ -541,6 +585,8 @@ jobs:
   # ── Package (macOS) ─────────────────────────────────────────────────
   package-macos:
     name: Package (macos)
+    needs: [changes]
+    if: needs.changes.outputs.code == 'true'
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v6
@@ -585,10 +631,11 @@ jobs:
       - name: Validate DMG
         run: hdiutil verify "oxicrab-ci-arm64.dmg"
 
-  # ── CI Gate ─────────────────────────────────────────────────────────
   # ── Fuzz Testing (Informational) ────────────────────────────────
   fuzz:
     name: Fuzz Testing
+    needs: [changes]
+    if: needs.changes.outputs.code == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -642,14 +689,16 @@ jobs:
         working-directory: fuzz
         continue-on-error: true
 
+  # ── CI Gate ─────────────────────────────────────────────────────────
   ci-gate:
     name: CI
     runs-on: ubuntu-latest
     if: always()
-    needs: [check, clippy, test-unit, test-integration, compile-debug, coverage, binary-size, package-linux, package-macos]
+    needs: [changes, check, clippy, test-unit, test-integration, compile-debug, coverage, binary-size, package-linux, package-macos]
     steps:
       - name: Check results
         run: |
+          echo "changes.code: ${{ needs.changes.outputs.code }}"
           echo "check: ${{ needs.check.result }}"
           echo "clippy: ${{ needs.clippy.result }}"
           echo "test-unit: ${{ needs.test-unit.result }}"
@@ -660,11 +709,13 @@ jobs:
           echo "package-linux: ${{ needs.package-linux.result }}"
           echo "package-macos: ${{ needs.package-macos.result }}"
 
-          # Fail if any required job failed or was cancelled
+          # check always runs (lightweight) — must pass
           if [[ "${{ needs.check.result }}" == "failure" || "${{ needs.check.result }}" == "cancelled" ]]; then
             echo "::error::check failed"
             exit 1
           fi
+
+          # Code-gated jobs: fail on failure/cancelled, accept skipped (docs-only changes)
           if [[ "${{ needs.clippy.result }}" == "failure" || "${{ needs.clippy.result }}" == "cancelled" ]]; then
             echo "::error::clippy failed"
             exit 1
@@ -681,7 +732,8 @@ jobs:
             echo "::error::compile-debug failed"
             exit 1
           fi
-          # coverage, binary-size, and package are informational — warn but don't block
+
+          # Informational jobs — warn but don't block (accept skipped too)
           if [[ "${{ needs.coverage.result }}" == "failure" ]]; then
             echo "::warning::coverage failed (non-blocking)"
           fi
